--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-cookies": "^1.7.0",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.2.0",
+    "vue-sessionstorage": "^1.0.0",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
