--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.2.0",
     "vue-sessionstorage": "^1.0.0",
+    "vue-simple-alert": "^1.1.1",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
